[gd_scene load_steps=17 format=2]

[ext_resource path="res://Graphics/Dino.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Graphics/UI/Bars/over_bar.png" type="Texture" id=4]
[ext_resource path="res://Graphics/UI/Bars/progress_bar.png" type="Texture" id=5]
[ext_resource path="res://Graphics/UI/Bars/under_bar.png" type="Texture" id=6]
[ext_resource path="res://Graphics/sword.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.6, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.6, 7.13106 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.58688, 8.47681 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 15, 16, 15, 16, 15, 16 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 91.3518, 65.8851 )
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="Col_Run" type="CollisionShape2D" parent="."]
position = Vector2( 1.60511, -0.848003 )
shape = SubResource( 1 )

[node name="Col_Seat" type="CollisionShape2D" parent="."]
position = Vector2( 1.75806, -1.16794 )
shape = SubResource( 2 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1.59229, -0.827454 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -4.96622, -6.464 )
enabled = true
cast_to = Vector2( 0, -5 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 8.14706, -6.46146 )
enabled = true
cast_to = Vector2( 0, -5 )

[node name="HP_Bar" type="TextureProgress" parent="."]
margin_left = 24.6606
margin_top = 33.8631
margin_right = 130.661
margin_bottom = 38.8633
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.60706, -0.827 )
scale = Vector2( 1, 0.95 )
texture = ExtResource( 1 )
hframes = 24
frame = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/Seat = SubResource( 7 )
anims/Seat_Stay = SubResource( 8 )
anims/Stay = SubResource( 9 )

[node name="Dash_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Dash_cd" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "New Bus"

[node name="Melee_Damage_Pos" type="Position2D" parent="."]

[node name="sword" type="Sprite" parent="Melee_Damage_Pos"]
position = Vector2( 0.0177917, -0.0402069 )
texture = ExtResource( 7 )
[connection signal="timeout" from="Dash_timer" to="." method="_on_Dash_timer_timeout"]
[connection signal="timeout" from="Dash_cd" to="." method="_on_Dash_cd_timeout"]
